Opening the select and blurring it are handled correctly

--- a/source/MultiSelect/_MultiSelect.scss
+++ b/source/MultiSelect/_MultiSelect.scss
@@ -35,11 +35,6 @@
   flex-grow: 0;
 }
 
-.header input {
-  cursor: auto;
-  width: 100%;
-}
-
 .down-arrow {
   justify-self: right;
   align-self: center;
@@ -63,17 +58,31 @@
   vertical-align: middle;
 }
 
-.remove-button {
+.cmd-remove-item {
   padding: 3px 2px 3px 3px;
   line-height: 50%;
 }
+
+/*
+* FILTER INPUT
+*/
+
+.txtFilter {
+  cursor: auto;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid #888;
+}
+
+
 /*
  * ITEM LIST
  */
-
+/*
  .item-list {
 
 }
+*/
 
 .item-container {
   position: absolute;
@@ -90,6 +99,7 @@
 }
 
 .item-container > div {
-  margin-top: 7px;
+  /* margin-top: 7px; */
+  padding-top: 5px;
   padding: 10px;
 }
